--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <div class="reveal">
       <div class="slides">
         <section data-markdown="markdown.md"></section>
+        <section data-markdown="questoes.md"></section>
       </div>
     </div>
     <script src="./lib/reveal/reveal.js"></script>
